--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,14 @@ header {
   background-color: #2b4353;
 }
 
+header::after {
+  content: "";
+  background: #fafafa;
+  width: 90%;
+  height: 2px;
+  display: block;
+}
+
 .wrapper {
   width: 90%;
   max-width: 1440px;
@@ -196,9 +204,9 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -284,9 +292,12 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 1rem 0;
   background: #2b4353;
-  gap: 1.5rem;
 }
 
 .about-me-container {
@@ -296,9 +307,9 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 1.5rem;
 }
 @media (max-width: 950px) {
@@ -467,7 +478,8 @@ header {
 /* Landing Page Project */
 .section-4 {
   min-height: 90vh;
-  padding: 2rem 0;
+  padding-top: 1rem;
+  padding-bottom: 2.5rem;
   background: #2b4353;
   letter-spacing: 0.1rem;
   display: -webkit-box;
@@ -654,7 +666,11 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 2rem 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1.5rem 0;
 }
 .section-6 h1 {
   font-size: calc(2vw + 10px);
@@ -693,7 +709,7 @@ header {
 .section-6 .mini-project-content .mini-inner-content .description {
   padding: 0.8rem 0.3rem;
   color: #fafafa;
-  height: 280px;
+  height: 300px;
 }
 .section-6 .mini-project-content .mini-inner-content .description p {
   padding: 0.2rem;
@@ -738,7 +754,7 @@ header {
   border-radius: 4px 4px 0 0;
 }
 
-/* Section 6, Contact Form */
+/* Section 7, Contact Form */
 .contact-form {
   background: #2b4353;
   min-height: 50vh;
