1/5/23, changes to projects, changes to about me, changes to padding and margin

--- a/css/style.css
+++ b/css/style.css
@@ -36,14 +36,6 @@ header {
   background-color: #2b4353;
 }
 
-header::after {
-  content: "";
-  background: #fafafa;
-  width: 90%;
-  height: 2px;
-  display: block;
-}
-
 .wrapper {
   width: 90%;
   max-width: 1440px;
@@ -214,7 +206,7 @@ header::after {
   letter-spacing: 0.1rem;
 }
 .container h1 {
-  font-size: calc(3vw + 26px);
+  font-size: calc(2vw + 20px);
   color: #fafafa;
   margin: 0;
 }
@@ -253,7 +245,6 @@ header::after {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding: 1rem 0;
   background: #2b4353;
 }
 
@@ -450,7 +441,7 @@ header::after {
           align-items: center;
 }
 .section-4 .landing-page-container h1 {
-  font-size: calc(2vw + 10px);
+  font-size: calc(2vw + 8px);
   text-align: center;
   color: #fafafa;
 }
@@ -491,13 +482,14 @@ header::after {
   height: 280px;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description p {
-  padding: 0.2rem;
+  padding: 0 0.5rem;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description .bold-text {
   font-weight: bold;
+  margin: 0;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description small {
-  padding: 0.2rem;
+  padding: 0 0.5rem;
   font-style: italic;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description .view-github-button {
@@ -630,7 +622,7 @@ header::after {
   padding: 1.5rem 0;
 }
 .section-6 h1 {
-  font-size: calc(2vw + 10px);
+  font-size: calc(2vw + 8px);
   text-align: center;
   color: #fafafa;
 }
@@ -669,13 +661,14 @@ header::after {
   height: 300px;
 }
 .section-6 .mini-project-content .mini-inner-content .description p {
-  padding: 0.2rem;
+  padding: 0 0.5rem;
 }
 .section-6 .mini-project-content .mini-inner-content .description .bold-text {
   font-weight: bold;
+  margin: 0;
 }
 .section-6 .mini-project-content .mini-inner-content .description small {
-  padding: 0.2rem;
+  padding: 0 0.5rem;
   font-style: italic;
 }
 .section-6 .mini-project-content .mini-inner-content .view-github-button {
