--- a/css/style.scss
+++ b/css/style.scss
@@ -535,6 +535,7 @@ align-items: center;
     align-items: center;
     flex-direction: column;
     padding: 1.5rem 0;
+    letter-spacing: 0.1rem;
     h1{
         font-size: calc(2vw + 8px);
         text-align: center;
