--- a/css/style.css
+++ b/css/style.css
@@ -226,12 +226,14 @@ header {
   cursor: pointer;
   font-size: 1rem;
   color: #fafafa;
+  -webkit-box-shadow: 5px 5px 0 0 rgba(34, 40, 49, 0.3);
+          box-shadow: 5px 5px 0 0 rgba(34, 40, 49, 0.3);
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
 }
 .container .intro-content .cv-btn:hover {
   background: #fafafa;
-  color: #e8630a;
+  color: #2b4353;
 }
 
 /* About Me Section */
@@ -293,6 +295,8 @@ header {
   cursor: pointer;
   font-size: 1rem;
   color: #fafafa;
+  -webkit-box-shadow: 5px 5px 0 0 rgba(34, 40, 49, 0.3);
+          box-shadow: 5px 5px 0 0 rgba(34, 40, 49, 0.3);
   -webkit-transition: 0.2s ease;
   transition: 0.2s ease;
   position: relative;
@@ -316,7 +320,7 @@ header {
   border-radius: 5px;
 }
 .about-me-container .about-me-content .read-btn:hover {
-  color: #e8630a;
+  color: #2b4353;
 }
 .about-me-container .about-me-content .read-btn:hover::after {
   -webkit-transform-origin: left;
@@ -371,9 +375,9 @@ header {
 
 /* Modal Section */
 .modal-container {
-  line-height: 1.3rem;
+  line-height: 1.7rem;
   width: 550px;
-  height: 495px;
+  height: 550px;
   background: #222831;
   border-radius: 5px;
   -webkit-box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.3);
@@ -415,8 +419,7 @@ header {
   color: #fafafa;
   width: 90%;
   margin-inline: auto;
-  padding: 2rem 0;
-  letter-spacing: 0.05rem;
+  padding: 4rem 0 1rem 0;
 }
 .modal-container .modal-content h1 {
   color: #e8630a;
@@ -767,7 +770,7 @@ header {
 }
 .contact-form .form-container .form .form-group .btn:hover {
   background: #fafafa;
-  color: #e8630a;
+  color: #2b4353;
 }
 .contact-form .form-container .form .form-group input, .contact-form .form-container .form .form-group textarea {
   padding: 0.8rem 2rem;
