--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   scroll-behavior: smooth;
 }
@@ -16,6 +17,7 @@ body {
   margin: 0;
   font-family: "Quicksand", sans-serif;
   overflow-x: hidden;
+  font-size: calc(0.5vw + 0.6rem);
 }
 
 header {
@@ -102,6 +104,12 @@ header {
   border: 2px solid #e8630a;
   border-radius: 5px;
   font-size: 1.5rem;
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+.navbar .my-logo:hover {
+  background: #e8630a;
+  color: #fafafa;
 }
 @media (max-width: 680px) {
   .navbar .my-logo {
@@ -214,17 +222,20 @@ header {
   color: #e8630a;
 }
 .container .intro-content p {
-  padding: 0.3 0;
+  margin: 0.8rem 0;
   color: #fafafa;
+}
+.container .intro-content .cv-container {
+  padding-top: 0.8rem;
 }
 .container .intro-content .cv-btn {
   text-decoration: none;
-  padding: 0.3rem 1rem;
+  padding: 0.5rem 1rem;
   background: #e8630a;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: calc(0.5vw + 0.6rem);
   color: #fafafa;
   -webkit-box-shadow: 5px 5px 0 0 rgba(34, 40, 49, 0.3);
           box-shadow: 5px 5px 0 0 rgba(34, 40, 49, 0.3);
@@ -234,6 +245,21 @@ header {
 .container .intro-content .cv-btn:hover {
   background: #fafafa;
   color: #2b4353;
+}
+.container .intro-content .soft-skill-list {
+  padding: 0;
+  margin: 0;
+  margin-top: 1.2rem;
+}
+.container .intro-content .soft-skill-list li {
+  list-style-type: none;
+  color: #fafafa;
+  padding: 0.3rem 0;
+}
+.container .intro-content .soft-skill-list li::before {
+  content: "✔";
+  color: #e8630a;
+  padding-right: 0.5rem;
 }
 
 /* About Me Section */
@@ -288,12 +314,12 @@ header {
   line-height: 1.3rem;
 }
 .about-me-container .about-me-content .read-btn {
+  font-size: calc(0.5vw + 0.6rem);
   padding: 0.5rem 1rem;
   background: #e8630a;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1rem;
   color: #fafafa;
   -webkit-box-shadow: 5px 5px 0 0 rgba(34, 40, 49, 0.3);
           box-shadow: 5px 5px 0 0 rgba(34, 40, 49, 0.3);
@@ -334,7 +360,8 @@ header {
   padding-bottom: 1rem;
 }
 .about-me-container .about-me-content p {
-  letter-spacing: 0.05rem;
+  letter-spacing: 0.06rem;
+  line-height: 1.6rem;
 }
 .about-me-container .about-column {
   width: 48%;
@@ -377,7 +404,7 @@ header {
 .modal-container {
   line-height: 1.7rem;
   width: 550px;
-  height: 550px;
+  height: 560px;
   background: #222831;
   border-radius: 5px;
   -webkit-box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.3);
@@ -505,11 +532,11 @@ header {
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description .view-github-button {
   height: 50px;
   position: absolute;
-  bottom: -15px;
+  bottom: -10px;
 }
 .section-4 .landing-page-container .landing-page-content .landing-page-column .description .view-github-button .view-btn {
   background: #e8630a;
-  padding: 0.2rem 0.5rem;
+  padding: 0.5rem 1rem;
   margin-left: 0.5rem;
   border-radius: 5px;
   -webkit-transition: 0.2s ease-in-out;
@@ -533,7 +560,7 @@ header {
 /* Section 5, Banner */
 .section-5 {
   min-height: 30vh;
-  background-image: url(/image/pexels-pixabay-417173.jpg);
+  background-image: url(/image/pexels-stephan-seeber-1054218.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -685,11 +712,11 @@ header {
 .section-6 .mini-project-content .mini-inner-content .view-github-button {
   height: 50px;
   position: absolute;
-  bottom: -15px;
+  bottom: -10px;
 }
 .section-6 .mini-project-content .mini-inner-content .view-github-button .view-btn {
   background: #e8630a;
-  padding: 0.2rem 0.5rem;
+  padding: 0.5rem 1rem;
   margin-left: 0.5rem;
   border-radius: 5px;
   -webkit-transition: 0.2s ease-in-out;
@@ -869,6 +896,13 @@ header {
   color: #fafafa;
   font-size: 1.5rem;
   padding: 0 0.3rem;
+}
+.footer .footer-content .footer-col a i {
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+.footer .footer-content .footer-col a i:hover {
+  color: #e8630a;
 }
 
 /* Error Message Status */
